--- a/default.conf
+++ b/default.conf
@@ -24,8 +24,9 @@
       ${NGINX_AUTH_BASIC_content}
 
       root   /var/www/html;
-      index  index.html index.htm;
-      try_files $uri /index.html =404;
+      index  index.html index.htm index.php;
+
+      try_files $uri $uri/ /index.html /index.php?$args =404;
 
       resolver          ${NGINX_DNS_RESOLVER} valid=300s;
       resolver_timeout  10s;
