fix root folder

--- a/default.conf
+++ b/default.conf
@@ -26,10 +26,10 @@
       root   /var/www/html;
       index  index.html index.htm index.php;
 
-      try_files $uri $uri/ /index.html /index.php?$args =404;
+      # try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.html /index.php?${DOLLAR}args =404;
 
-      resolver          ${NGINX_DNS_RESOLVER} valid=300s;
-      resolver_timeout  10s;
+      # resolver          ${NGINX_DNS_RESOLVER} valid=300s;
+      # resolver_timeout  10s;
 
     }
   }
