--- a/default.conf
+++ b/default.conf
@@ -26,6 +26,7 @@
       root   /var/www/html;
       index  index.html index.htm index.php;
 
+      try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.html =404;
       # try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.html /index.php?${DOLLAR}args =404;
 
       # resolver          ${NGINX_DNS_RESOLVER} valid=300s;
