refacto to new version alpine|debian|ubuntu

--- a/supervisor/program/nginx.conf
+++ b/supervisor/program/nginx.conf
@@ -10,5 +10,5 @@ priority=150
 
 [program:nginx]
 autorestart=true
-command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
+command=bash -c 'sleep 2 && /usr/sbin/nginx -c /etc/nginx/nginx.conf'
 priority=300
